[gd_scene load_steps=11 format=2]

[ext_resource path="res://Entities/Sentinel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sentinel/SentinelSelection.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sentinel/SentinelBody.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sentinel/SentinelStripes.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sentinel/SentinelTreads.png" type="Texture" id=5]
[ext_resource path="res://Entities/Treads.gd" type="Script" id=6]
[ext_resource path="res://Assets/Sentinel/SentinelSensor.png" type="Texture" id=7]
[ext_resource path="res://Communication/Reprogrammable.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

export (int, \"SELF\", \"HEAD\", \"BASE\", \"LEFT\", \"RIGHT\", \"FRONT\", \"BACK\") var attachmentPosition = 0

func get_attachment_position():
	return attachmentPosition

func get_attachment():
	for child in get_children():
		if child.has_method(\"pass_order\"):
			return child
	
	return null"

[sub_resource type="CircleShape2D" id=2]
radius = 44.7775

[node name="Sentinel" type="KinematicBody2D"]
scale = Vector2( 0.6, 0.6 )
collision_mask = 513
collision/safe_margin = 60.0
script = ExtResource( 1 )

[node name="SpriteContainer" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="SelectionIndicator" type="Sprite" parent="SpriteContainer"]
visible = false
self_modulate = Color( 0.266667, 1, 0, 1 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="SpriteContainer"]
self_modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorStripes" type="Sprite" parent="SpriteContainer"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AttachmentContainer" type="Node2D" parent="SpriteContainer"]

[node name="Base" type="Node2D" parent="SpriteContainer/AttachmentContainer"]
script = SubResource( 1 )
attachmentPosition = 2

[node name="Treads" type="Sprite" parent="SpriteContainer/AttachmentContainer/Base"]
z_index = -1
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="Head" type="Node2D" parent="SpriteContainer/AttachmentContainer"]
visible = false
script = SubResource( 1 )
attachmentPosition = 1

[node name="Sensor" type="Sprite" parent="SpriteContainer/AttachmentContainer/Head"]
self_modulate = Color( 1, 0, 0, 1 )
z_index = 5
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Reprogrammable" parent="." instance=ExtResource( 8 )]
